...
      return;
    }
    setPage(page + 1);
    fetchMessageGroups();
  };
  return (
    <View style={styles.container} testID='messageGroupScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={messageGroupList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
