...

export default function EntitiesScreen({navigation})
{
  return (
    <ScrollView style={styles.container} contentContainerStyle={styles.paddedScrollView} testID='entityScreenScrollList'>
      <Text style={styles.centerText}>JHipster Entities will appear below</Text>
      <RoundedButton text='MessageGroup' onPress={() => navigation.navigate('MessageGroup')} testID='messageGroupEntityScreenButton' />
      <RoundedButton
        text='MessageContent'
        onPress={() => navigation.navigate('MessageContent')}
        testID='messageContentEntityScreenButton'
      />
      <RoundedButton text='HanhChinhVN' onPress={() => navigation.navigate('HanhChinhVN')} testID='hanhChinhVNEntityScreenButton' />
...
      <RoundedButton text='PageProfile' onPress={() => navigation.navigate('PageProfile')} testID='pageProfileEntityScreenButton' />
      <RoundedButton text='GroupPost' onPress={() => navigation.navigate('GroupPost')} testID='groupPostEntityScreenButton' />
      <RoundedButton text='Post' onPress={() => navigation.navigate('Post')} testID='postEntityScreenButton' />
      <RoundedButton text='PostComment' onPress={() => navigation.navigate('PostComment')} testID='postCommentEntityScreenButton' />
      <RoundedButton text='PostLike' onPress={() => navigation.navigate('PostLike')} testID='postLikeEntityScreenButton' />
      <RoundedButton text='GroupProfile' onPress={() => navigation.navigate('GroupProfile')} testID='groupProfileEntityScreenButton' />
      <RoundedButton text='NewsFeed' onPress={() => navigation.navigate('NewsFeed')} testID='newsFeedEntityScreenButton' />
      <RoundedButton text='RankUser' onPress={() => navigation.navigate('RankUser')} testID='rankUserEntityScreenButton' />
      <RoundedButton text='RankGroup' onPress={() => navigation.navigate('RankGroup')} testID='rankGroupEntityScreenButton' />
      <RoundedButton text='Notification' onPress={() => navigation.navigate('Notification')} testID='notificationEntityScreenButton' />
      <RoundedButton text='Album' onPress={() => navigation.navigate('Album')} testID='albumEntityScreenButton' />
      <RoundedButton text='Video' onPress={() => navigation.navigate('Video')} testID='videoEntityScreenButton' />
      <RoundedButton text='Image' onPress={() => navigation.navigate('Image')} testID='imageEntityScreenButton' />
...
