import React, {createRef} from 'react';
import {ActivityIndicator, Text, View} from 'react-native';
import {connect} from 'react-redux';
import * as Yup from 'yup';

import NewsFeedActions from './news-feed.reducer';
import BaseInfoActions from '../base-info/base-info.reducer';
import PostActions from '../post/post.reducer';
import {KeyboardAwareScrollView} from 'react-native-keyboard-aware-scroll-view';
import FormButton from '../../../shared/components/form/jhi-form-button';
import FormField from '../../../shared/components/form/jhi-form-field';
import Form from '../../../shared/components/form/jhi-form';
import {useDidUpdateEffect} from '../../../shared/util/use-did-update-effect';
import styles from './news-feed-styles';

// set up validation schema for the form
const validationSchema = Yup.object().shape({
  uuid: Yup.string().required(),
});

function NewsFeedEditScreen(props)
{
  const {
    getNewsFeed,
    updateNewsFeed,
    route,
    newsFeed,
    fetching,
    updating,
    errorUpdating,
    updateSuccess,
    navigation,
    reset,
    getAllBaseInfos,
    baseInfoList,
    getAllPosts,
    postList,
  } = props;

  const [formValue, setFormValue] = React.useState();
  const [error, setError] = React.useState('');

  const isNewEntity = !(route.params && route.params.entityId);

  React.useEffect(() =>
  {
    if (!isNewEntity)
    {
      getNewsFeed(route.params.entityId);
    }
    else
    {
      reset();
    }
  }, [isNewEntity, getNewsFeed, route, reset]);

  React.useEffect(() =>
  {
    if (isNewEntity)
    {
      setFormValue(entityToFormValue({}));
    }
    else if (!fetching)
    {
      setFormValue(entityToFormValue(newsFeed));
    }
  }, [newsFeed, fetching, isNewEntity]);

  // fetch related entities
  React.useEffect(() =>
  {
    getAllBaseInfos();
    getAllPosts();
  }, [getAllBaseInfos, getAllPosts]);

  useDidUpdateEffect(() =>
  {
    if (updating === false)
    {
      if (errorUpdating)
      {
        setError(errorUpdating && errorUpdating.detail ? errorUpdating.detail : 'Something went wrong updating the entity');
      }
      else if (updateSuccess)
      {
        setError('');
        isNewEntity || !navigation.canGoBack() ? navigation.replace('NewsFeedDetail', {entityId: newsFeed?.id}) : navigation.pop();
      }
    }
  }, [updateSuccess, errorUpdating, navigation]);

  const onSubmit = (data) => updateNewsFeed(formValueToEntity(data));

  if (fetching)
  {
    return (
      <View style={styles.loading}>
        <ActivityIndicator size='large' />
      </View>
    );
  }

  const formRef = createRef();
  const uuidRef = createRef();
  const priorityIndexRef = createRef();
  const infoRef = createRef();
  const postRef = createRef();

  return (
    <View style={styles.container}>
      <KeyboardAwareScrollView
        enableResetScrollToCoords={false}
        testID='newsFeedEditScrollView'
        keyboardShouldPersistTaps='handled'
        keyboardDismissMode='on-drag'
        contentContainerStyle={styles.paddedScrollView}>
        {!!error && <Text style={styles.errorText}>{error}</Text>}
        {formValue && (
          <Form initialValues={formValue} validationSchema={validationSchema} onSubmit={onSubmit} ref={formRef}>
            <FormField
              name='uuid'
              ref={uuidRef}
              label='Uuid'
              placeholder='Enter Uuid'
              testID='uuidInput'
              onSubmitEditing={() => priorityIndexRef.current?.focus()}
            />
            <FormField
              name='priorityIndex'
              ref={priorityIndexRef}
              label='Priority Index'
              placeholder='Enter Priority Index'
              testID='priorityIndexInput'
              inputType='number'
            />
            <FormField
              name='info'
              inputType='select-one'
              ref={infoRef}
              listItems={baseInfoList}
              listItemLabelField='id'
              label='Info'
              placeholder='Select Info'
              testID='baseInfoSelectInput'
            />
            <FormField
              name='post'
              inputType='select-one'
              ref={postRef}
              listItems={postList}
              listItemLabelField='id'
              label='Post'
              placeholder='Select Post'
              testID='postSelectInput'
            />

            <FormButton title={'Save'} testID={'submitButton'} />
          </Form>
        )}
      </KeyboardAwareScrollView>
    </View>
  );
}

// convenience methods for customizing the mapping of the entity to/from the form value
const entityToFormValue = (value) =>
{
  if (!value)
  {
    return {};
  }
  return {
    id: value.id ?? null,
    uuid: value.uuid ?? null,
    priorityIndex: value.priorityIndex ?? null,
    info: value.info && value.info.id ? value.info.id : null,
    post: value.post && value.post.id ? value.post.id : null,
  };
};
const formValueToEntity = (value) =>
{
  const entity = {
    id: value.id ?? null,
    uuid: value.uuid ?? null,
    priorityIndex: value.priorityIndex ?? null,
  };
  entity.info = value.info ? {id: value.info} : null;
  entity.post = value.post ? {id: value.post} : null;
  return entity;
};

const mapStateToProps = (state) =>
{
  return {
    baseInfoList: state.baseInfos.baseInfoList ?? [],
    postList: state.posts.postList ?? [],
    newsFeed: state.newsFeeds.newsFeed,
    fetching: state.newsFeeds.fetchingOne,
    updating: state.newsFeeds.updating,
    updateSuccess: state.newsFeeds.updateSuccess,
    errorUpdating: state.newsFeeds.errorUpdating,
  };
};

const mapDispatchToProps = (dispatch) =>
{
  return {
    getAllBaseInfos: (options) => dispatch(BaseInfoActions.baseInfoAllRequest(options)),
    getAllPosts: (options) => dispatch(PostActions.postAllRequest(options)),
    getNewsFeed: (id) => dispatch(NewsFeedActions.newsFeedRequest(id)),
    getAllNewsFeeds: (options) => dispatch(NewsFeedActions.newsFeedAllRequest(options)),
    updateNewsFeed: (newsFeed) => dispatch(NewsFeedActions.newsFeedUpdateRequest(newsFeed)),
    reset: () => dispatch(NewsFeedActions.newsFeedReset()),
  };
};

export default connect(mapStateToProps, mapDispatchToProps)(NewsFeedEditScreen);
