...
      return;
    }
    setPage(page + 1);
    fetchNewsFeeds();
  };
  return (
    <View style={styles.container} testID='newsFeedScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={newsFeedList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
